fixed some jquery issues

--- a/aboutme.html
+++ b/aboutme.html
@@ -15,47 +15,8 @@
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
     <style type="text/css">
-        html,
-        body,
-        header,
-        .view {
-            height: 100%;
-        }
-
-        @media (max-width: 740px) {
-            html,
-            body,
-            header,
-            .view {
-                height: 100vh;
-            }
-        }
-
         .top-nav-collapse {
             background-color: #78909c !important;
-        }
-
-        .navbar:not(.top-nav-collapse) {
-            background: transparent !important;
-        }
-
-        @media (max-width: 991px) {
-            .navbar:not(.top-nav-collapse) {
-                background: #78909c !important;
-            }
-        }
-
-        h1 {
-            letter-spacing: 8px;
-        }
-
-        h5 {
-            letter-spacing: 3px;
-        }
-
-        .hr-light {
-            border-top: 3px solid #fff;
-            width: 80px;
         }
 
     </style>
@@ -65,7 +26,7 @@
 <!-- Main navigation -->
 <header>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark  top-nav-collapse">
         <div class="container">
             <a class="navbar-brand" href="#"><strong>Blog Label</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
@@ -74,11 +35,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutme.html">Me</a>
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="aboutme.html">Me <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Book</a>
@@ -96,34 +57,7 @@
         </div>
     </nav>
     <!-- Navbar -->
-    <!-- Full Page Intro -->
-    <div class="view jarallax" data-jarallax='{"speed": 0.2}'
-         style="background-image: url('boat.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-        <!-- Mask & flexbox options-->
-        <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-            <!-- Content -->
-            <div class="container">
-                <!--Grid row-->
-                <div class="row">
-                    <!--Grid column-->
-                    <div class="col-md-12 mb-4 white-text text-center">
-                        <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown"
-                            data-wow-delay="0.3s"><strong>Your Book Blog</strong></h1>
-                        <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                        <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>My Book & Blog</strong></h5>
-                        <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s" href="aboutme.html">Me</a>
-                        <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.5s">Book</a>
-                        <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.6s">Blog</a>
-                    </div>
-                    <!--Grid column-->
-                </div>
-                <!--Grid row-->
-            </div>
-            <!-- Content -->
-        </div>
-        <!-- Mask & flexbox options-->
-    </div>
-    <!-- Full Page Intro -->
+
 </header>
 <!-- Main navigation -->
 <!--Main Layout-->
@@ -132,8 +66,12 @@
         <!--Grid row-->
         <div class="row py-5">
             <!--Grid column-->
-            <div class="col-md-12 text-center">
-                <p>Blog posts go here.</p>
+            <div class="col-md-4">
+                <img src="dancer.jpg" class="img-fluid" />
+            </div>
+            <div class="col-md-8">
+                <h1>Catchy Title</h1>
+                <p>Some stuff about you for your readers.</p>
             </div>
             <!--Grid column-->
         </div>
